syntax = "proto3";

package agenciesproject;

service AgencyProjectService {
  rpc CreateAgencyProject (CreateAgencyProjectRequest) returns (AgencyProject);
  rpc UpdateAgencyProject (UpdateAgencyProjectRequest) returns (AgencyProject);
  rpc DeleteAgencyProject (DeleteAgencyProjectRequest) returns (DeleteAgencyProjectResponse);
  rpc GetAgencyProject (GetAgencyProjectRequest) returns (AgencyProject);
  rpc ListAgencyProjects (ListAgencyProjectsRequest) returns (ListAgencyProjectsResponse);
}

message AgencyProject {
  string id = 1;
  string agency_id = 2;
  string project_id = 3;
  optional string created_at = 4;
}

message ListAgencyProjectsResponse {
  repeated AgencyProject data = 1;
}

message CreateAgencyProjectRequest {
  string agency_id = 1;
  string project_id = 2;
}

message UpdateAgencyProjectRequest {
  string id = 1;
  optional string project_id = 2;
}

message DeleteAgencyProjectRequest {
  string id = 1;
}

message GetAgencyProjectRequest {
  string id = 1;
}

message DeleteAgencyProjectResponse {
  bool success = 1;
}

message ListAgencyProjectsRequest {
  optional int32 perPage = 1;
  optional int32 page = 2;
  optional string search = 3;
  optional string agency_id = 4;
}